feat(web/api): API for problem attachments
